--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/Spigot/Server/spigot.jar" sourcepath="/Spigot/Server/spigot.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="http://jd.bukkit.org/apidocs/"/>
+			<attribute name="javadoc_location" value="http://twizmwaz.in/docs/bukkit/"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
