--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,5 @@
 name: JumpAndRun
-version: 0.2
+version: 1.2
 author: Jannify
 depend: [ Vault ]
 
@@ -9,3 +9,9 @@ commands:
   jump:
     description: Benötigt um jumps zu erstellen und einzustellen
     aliases: [jumpandrun, jandr, jumps]
+  jvote:
+    description: Bewertet das am nächsten gelegene Jump and Run
+    aliases: [jumpvote]
+  jback:
+    description: Teleportiert dich zum Jump Villager
+    aliases: [jumpback]
